# BOSS

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENCE  README.md  make_emscripten_windows.bat
VisualStudio/: BOSS.vcxproj  BOSS_main.vcxproj
dockerdata/BWAPI/BWAPI/Chaoslauncher/: __log.txt
dockerdata/BWAPI/BWAPI/Chaoslauncher/Plugins/: BWAPI_PluginInjector.txt  BWAPI_PluginInjectord.bwl
dockerdata/BWAPI/BWAPI/MPQDraft/: BWAPI_PluginInjector.qdp
dockerdata/BWAPI/BWAPI/include/BWAPI/: SetContainer.h
dockerdata/BWAPI/bwapi-data/: bwapi.ini
emscripten/: Makefile
include/: BOSSExperiments.h  BOSSParameters.h  BOSSPlotBuildOrders.h  CombatSearchExperiment.h  GameState.h  JSONTools.h
source/: BOSSAssert.cpp  GameState.cpp
source/deprecated/: BOSSVisExperiment.h
